# screen-capture-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  issues.jsonl
cpp/: CMakeLists.txt  debug-wrapper.sh
cpp/src/: base64.h  main.mm  mcp_server.cpp  mcp_server.h  screen_capture.h  screen_capture.mm
